Update contact section with principal name and school details

--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@
 
 <section class="section" id="contact">
   <h2>Contact Us</h2>
-  <p><strong>Address:</strong> Bhashyam School, Ravi Nagar, [Your City]</p>
-  <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
+  <p><strong>Principal:</strong> Mr. [S.V.V.Raghava rao]</p>
+  <p><strong>Address:</strong> Bhashyam High School, Ravi Nagar, Naidu thota [Visakhapatnam]</p>
+  <p><strong>Phone:</strong> +91-9848884692</p>
   <p><strong>Email:</strong> bhashyam.ravinagar@gmail.com</p>
 </section>
 
