--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <section class="hero">
   <h1>Empowering Future Leaders</h1>
-  <p>Join one of the most reputed schools in Ravi Nagar.</p>
+  <p>Join one of the most reputed schools in Visakhapatnam.</p>
 </section>
 
 <section class="section" id="admissions">
